force-app/main/default/objects/PODSoftwareDeliveryMapping__c/fields/Box_Shared_Link__c.field-meta.xml
<CustomField>
    <fullName>Box_Shared_Link__c</fullName>
    <label>Box Shared Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>