force-app/main/default/objects/PODSoftwareDeliveryMapping__c/fields/License_Basis__c.field-meta.xml
<CustomField>
    <fullName>License_Basis__c</fullName>
    <label>License Basis</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Activity Tracker</fullName>
            </value>
            <value>
                <fullName>Additional Security Extensions</fullName>
            </value>
            <value>
                <fullName>Advanced</fullName>
            </value>
            <value>
                <fullName>Advanced - Cloud</fullName>
            </value>
            <value>
                <fullName>Advanced Security Package</fullName>
            </value>
            <value>
                <fullName>AI Module</fullName>
            </value>
            <value>
                <fullName>Assessment Module</fullName>
            </value>
            <value>
                <fullName>Attorney Acknowledgements</fullName>
            </value>
            <value>
                <fullName>Auditing Package</fullName>
            </value>
            <value>
                <fullName>Capture</fullName>
            </value>
            <value>
                <fullName>Cloud: Total Management</fullName>
            </value>
            <value>
                <fullName>Compliance Module</fullName>
            </value>
            <value>
                <fullName>Confidentiality Package</fullName>
            </value>
            <value>
                <fullName>Contractors</fullName>
            </value>
            <value>
                <fullName>Core Limited</fullName>
            </value>
            <value>
                <fullName>Core Management</fullName>
            </value>
            <value>
                <fullName>Criteria Based Access</fullName>
            </value>
            <value>
                <fullName>DMS Package</fullName>
            </value>
            <value>
                <fullName>Document Assembly</fullName>
            </value>
            <value>
                <fullName>Dynamic Groups</fullName>
            </value>
            <value>
                <fullName>Engage. Letter w/ BI</fullName>
            </value>
            <value>
                <fullName>Engage. Letter w/ BI - Cloud</fullName>
            </value>
            <value>
                <fullName>Extend</fullName>
            </value>
            <value>
                <fullName>Foundational Walls</fullName>
            </value>
            <value>
                <fullName>Lawyer Portal</fullName>
            </value>
            <value>
                <fullName>Legal Holds</fullName>
            </value>
            <value>
                <fullName>Matter Team Manager</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>People, Places &amp; Printers</fullName>
            </value>
            <value>
                <fullName>Regulatory Reporting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>