force-app/main/default/objects/PODSoftwareDeliveryMapping__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Conflicts</fullName>
            </value>
            <value>
                <fullName>Experience</fullName>
            </value>
            <value>
                <fullName>Intake</fullName>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
            <value>
                <fullName>LegalKey</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Terms</fullName>
            </value>
            <value>
                <fullName>TFG - Other</fullName>
            </value>
            <value>
                <fullName>Time</fullName>
            </value>
            <value>
                <fullName>Walls</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>