force-app/main/default/objects/PODSoftwareDeliveryMapping__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>License_Basis__c</columns>
    <columns>Version__c</columns>
    <columns>Box_File__c</columns>
    <columns>Box_Shared_Link__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>