force-app/main/default/objects/PODSoftwareDeliveryMapping__c/listViews/Walls_Mappings.listView-meta.xml
<ListView>
    <fullName>Walls_Mappings</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>License_Basis__c</columns>
    <columns>Version__c</columns>
    <columns>Box_File__c</columns>
    <columns>Box_Shared_Link__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product__c</field>
        <operation>equals</operation>
        <value>Walls</value>
    </filters>
    <label>Walls Mappings</label>
    <language>en_US</language>
</ListView>